project-manifests/k8s/deployment-mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: chat-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  
  template:
    metadata:
      name: mongodb
      namespace: chat-app
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
          - containerPort: 27017
          volumeMounts:
          - name: mongo-data
            mountPath: /data/db
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongodb-pvc
